주석 처리 및 개발 시 붙여놨던 불필요한 로직 삭제

--- a/src/main/resources/templates/html/furever_main.html
+++ b/src/main/resources/templates/html/furever_main.html
@@ -41,7 +41,7 @@
                 <div class="row2 align-items-center justify-content-center justify-content-lg-between">
                     <div class="col-12 col-sm-9 col-md-8 col-lg-6 mb-5 mb-lg-5">
                         <img th:src="@{/assets/img/illustrations/2.png}" alt="boy illustration"
-                        style="border-radius: 70%; width: 200%; height: auto;">
+                        th:style="'border-radius: 70%; width: 200%; height: auto;'">
                     </div>
                     <div class="col-sm-12 col-lg-6">
                         <div class="text-center text-lg-left">
