--- a/src/main/resources/templates/html/furever_board.html
+++ b/src/main/resources/templates/html/furever_board.html
@@ -61,7 +61,7 @@
                 </a>
                 <div>
                     <a class="btn mb-2 mr-2 btn-warning" type="button" id="mypage-btn" th:href="@{/fureverhomes/mypage/adopt}">마이페이지</a>
-                    <a class="btn mb-2 mr-2 btn-warning" type="button" id="board-btn" th:href="@{/fureverhomes/board}">입양 후 이야기</a>
+                    <a class="btn mb-2 mr-2 btn-warning" type="button" id="adopt-btn" th:href="@{/fureverhomes/animal}">입양하기</a>
                     <button class="btn mb-2 mr-2 btn-warning" type="button" id="signOut-btn">로그아웃</button>
                 </div>
             </div>
