--- a/src/main/resources/templates/html/furever_board_create.html
+++ b/src/main/resources/templates/html/furever_board_create.html
@@ -49,7 +49,7 @@
             </a>
             <div>
                 <a class="btn mb-2 mr-2 btn-warning" type="button" id="mypage-btn" th:href="@{/fureverhomes/mypage/adopt}">마이페이지</a>
-                <a class="btn mb-2 mr-2 btn-warning" type="button" id="board-btn" th:href="@{/fureverhomes/board}">입양 후 이야기</a>
+                <a class="btn mb-2 mr-2 btn-warning" type="button" id="adopt-btn" th:href="@{/fureverhomes/animal}">입양하기</a>
                 <button class="btn mb-2 mr-2 btn-warning" type="button" id="signOut-btn">로그아웃</button>
             </div>
         </div>
@@ -94,6 +94,7 @@
                             <div class="col">
                                 <button class="btn btn-warning mt-2 animate-up-2"
                                         type="button" id="create-btn">등록하기</button>
+                                <a class="btn mt-2 animate-up-2 btn-danger" type="button" th:href="@{/fureverhomes/board}">취소</a>
                             </div>
                         </div>
                     </form>
